系统基本完善

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.7.7</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.yunie</groupId>
+    <groupId>com.yuyun</groupId>
     <artifactId>user-center</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>user-center</name>
@@ -40,6 +40,14 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <!-- 添加knife4j依赖 -->
+        <!-- https://mvnrepository.com/artifact/com.github.xiaoymin/knife4j-spring-boot-starter -->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.3</version>
+        </dependency>
+
         <dependency>
             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
