--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,23 @@
 spring:
+  profiles:
+    active: dev #接口文档默认环境dev
+  mvc:
+    pathmatch:
+      # Springfox使用的路径匹配是基于AntPathMatcher的，而Spring Boot 2.6.X使用的是PathPatternMatcher
+      # 所以需要配置此参数
+      matching-strategy: ant_path_matcher
   application:
     name: user-center
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/ucenter
+    url: jdbc:mysql://localhost:3306/yupao
     username: root
     password: 123456
     #session失效时间
   session:
     timeout: 86400
 server:
-  port: 8080
+  port: 8081
   servlet:
     context-path: /api
 mybatis-plus:
